--- a/branches/css/styles.css
+++ b/branches/css/styles.css
@@ -1,27 +1,14 @@
-body {
-     padding: 1.5em;
-margin: 0;
-background: #666;
-font-family: Georgia;
-}
-
-h1, h2, h3, h4 {
-  font-family: Verdana;
-  margin-bottom: 0.15em;
-}
-
-h1 {
- font-size: 1.5em;   
-}
-      
-#defaultCanvas {
-   border-radius: 4px;
-}
-
-.comments {
-          width: 560px;
-          background: rgb(200,175,150);
+.comments, #controls {
+          width: 300px;
+          background: #555;
+    border: solid 2px #444;
           padding: 10px 20px;
           margin-top: 10px;
           border-radius: 4px;
+          float: left;
  }
+
+#sketch01 {
+ float: left;
+    margin: 10px 10px 0 0;
+}
