edited controls to use bufi

--- a/balls03/main.css
+++ b/balls03/main.css
@@ -26,102 +26,7 @@ h2, h3, h4 {
 
 #controls {
     max-width: 560px;
-    margin-top: 1em
-}
-
-#controls legend {
-  color: #fff;
-}
-
-#controls label {
-    width: 10em;
-    display: inline-block;
-    color: #fff;
-    padding: 0.5em
-}
-
-
-/* CSS care of: http://codepen.io/hugo/pen/eoaDw  */
-/*==============================================
-Base Form Styles 
-All form elements need these styles
-The rest are modular
-================================================ */
-[class*="fontawesome-"]:before {
-  font-family: 'FontAwesome', sans-serif;
-  font-size: 1.5rem;
-  line-height: 2;
-}
-
-.ui {
-  border-radius: 0.25rem;
-  box-shadow: inset 0.1rem 0.1rem 0 rgba(0, 0, 0, 0.1), 0.2rem 0.2rem 0 rgba(255, 255, 255, 0.1);
-  background: rgba(0, 0, 0, 0.25);
-  display: inline-block;
-  font-size: 1rem;
-  margin: 0 0 1rem 0;
-  padding: 0.25rem 0.5rem;
-  text-align: center;
-  width: 30rem;
-}
-.ui input[type="email"], .ui input[type="password"], .ui input[type="search"] {
-  background: rgba(0, 0, 0, 0.25);
-  border: 0;
-  border-radius: 0;
-  height: 3rem;
-  width: 58%;
-  color: #fff;
-  float: left;
-  padding-left: 0.5rem;
-}
-.ui input[type="email"]:focus, .ui input[type="password"]:focus, .ui input[type="search"]:focus {
-  background: rgba(0, 0, 0, 0.5);
-  transition: background 1s ease;
-}
-.ui input[type="submit"] {
-  background: rgba(0, 0, 0, 0.4);
-  border: 0;
-  border-radius: 0 1rem 1rem 0;
-  color: #fff;
-  float: left;
-  height: 3rem;
-  width: 20%;
-  z-index: 3;
-}
-.ui input[type="submit"]:hover {
-  background: rgba(0, 0, 0, 0.6);
-  transition: all 1s ease;
-}
-.ui label {
-  background: rgba(0, 0, 0, 0.4);
-  border: 0;
-  border-radius: 0 1rem 1rem 0;
-  color: #fff;
-  float: left;
-  height: 3rem;
-  width: 20%;
-  z-index: 3;
-  border-radius: 1rem 0 0 1rem;
-  line-height: 3;
-}
-
-/*==============================================
-Slider
-================================================ */
-input[type='range'] {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  background: rgba(0, 0, 0, 0.5);
-  height: 0.5rem;
-  width: 100%;
-}
-
-input[type='range']::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  border-radius: 0.25rem;
-  background: white;
-  height: 1rem;
-  width: 1.5rem;
-    box-shadow: 0.2rem 0.2rem 0.2rem rgba(0, 0, 0, 0.5);
+    width: 100%;
+    min-width: 300px;
+    float: left;
 }
